[project]
name = "google-adk-custom"
description = "Modified Google ADK with PUT method for session state updates"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Izzy", email = "izzy@example.com" }]
version = "0.1.0"

dependencies = [
  "PyYAML>=6.0.2, <7.0.0",
  "absolufy-imports>=0.3.1, <1.0.0",
  "anyio>=4.9.0, <5.0.0;python_version>='3.10'",
  "authlib>=1.5.1, <2.0.0",
  "click>=8.1.8, <9.0.0",
  "fastapi>=0.115.0, <1.119.0",
  "google-api-python-client>=2.157.0, <3.0.0",
  "google-cloud-aiplatform>=1.121.0, <2.0.0",
  "google-cloud-bigtable>=2.32.0",
  "google-cloud-discoveryengine>=0.13.12, <0.14.0",
  "google-cloud-secret-manager>=2.22.0, <3.0.0",
  "google-cloud-spanner>=3.56.0, <4.0.0",
  "google-cloud-speech>=2.30.0, <3.0.0",
  "google-cloud-storage>=2.18.0, <3.0.0",
  "google-genai>=1.45.0, <2.0.0",
  "graphviz>=0.20.2, <1.0.0",
  "mcp>=1.8.0, <2.0.0;python_version>='3.10'",
  "opentelemetry-api>=1.37.0, <=1.37.0",
  "opentelemetry-exporter-gcp-logging>=1.9.0a0, <2.0.0",
  "opentelemetry-exporter-gcp-monitoring>=1.9.0a0, <2.0.0",
  "opentelemetry-exporter-gcp-trace>=1.9.0, <2.0.0",
  "opentelemetry-exporter-otlp-proto-http>=1.36.0",
  "opentelemetry-resourcedetector-gcp>=1.9.0a0, <2.0.0",
  "opentelemetry-sdk>=1.37.0, <=1.37.0",
  "opentelemetry-instrumentation-fastapi>=0.41b0",
  "pydantic>=2.0, <3.0.0",
  "python-dateutil>=2.9.0.post0, <3.0.0",
  "python-dotenv>=1.0.0, <2.0.0",
  "python-multipart>=0.0.6",
  "requests>=2.32.4, <3.0.0",
  "sqlalchemy-spanner>=1.14.0",
  "sqlalchemy>=2.0, <3.0.0",
  "starlette>=0.46.2, <1.0.0",
  "tenacity>=8.0.0, <9.0.0",
  "typing-extensions>=4.5, <5",
  "tzlocal>=5.3, <6.0",
  "uvicorn>=0.34.0, <1.0.0",
  "watchdog>=6.0.0, <7.0.0",
  "websockets>=15.0.1, <16.0.0",
]

[project.scripts]
adk = "google.adk.cli:main"

[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "google.adk"
